# R-Sharp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODOs.md  grammar.ebnf  grammar.txt  test.rs
compiler/: CMakeLists.txt
compiler/include/R-Sharp/: AArch64CodeGenerator.hpp  Architecture.hpp  AstNodes.hpp  AstNodesFWD.hpp  AstPrinter.hpp  AstVisitor.hpp  CCodeGenerator.hpp  ErrorPrinter.hpp  Graph.hpp  Logging.hpp  NASMCodeGenerator.hpp  Parser.hpp  ParsingCache.hpp  RSI.hpp  RSIAnalysis.hpp  RSIGenerator.hpp  RSIPass.hpp  RSIToAssembly.hpp  RSITools.hpp  RSI_FWD.hpp  SemanticValidator.hpp  Syscall.hpp  Token.hpp  Tokenizer.hpp  Utils.hpp  Validator.hpp  VariableSizeInserter.hpp
compiler/src/: AArch64CodeGenerator.cpp  Architecture.cpp  AstNodes.cpp  AstType.cpp  AstVisitor.cpp  CCodeGeneration.cpp  CCodeGeneror.cpp  NASMCodeGenerator.cpp  Parser.cpp  ParsingCache.cpp  RSIAnalysis.cpp  RSIGenerator.cpp  RSIPass.cpp  RSIToAssemply.cpp  RSITools.cpp  SemanticValidator.cpp  Token.cpp  Tokenizer.cpp  Utils.cpp  Validator.cpp  VariableSizeInserter.cpp  main.cpp
compiler/src/ast/: AstNodes.cpp  AstType.cpp  SemanticValidator.cpp  VariableSizeInserter.cpp
compiler/src/backend/: AArch64CodeGenerator.cpp  Architecture.cpp  CCodeGeneror.cpp  NASMCodeGenerator.cpp  RSIAnalysis.cpp  RSIGenerator.cpp  RSIPass.cpp  RSIToAssemply.cpp  RSITools.cpp
compiler/src/frontend/: Parser.cpp  ParsingCache.cpp  Token.cpp  Tokenizer.cpp  Utils.cpp
tests/: CMakeLists.txt  compilerTester.cpp  return0.rs  return42.rs  return_negative_5.rs  return_nested_unary2.rs  return_not_5.rs
tests/binary_operators/: add.rs  associativity2.rs  div.rs  div_neg.rs  parens.rs  sub.rs  sub_neg.rs
tests/boolean_operators/: and_false.rs  and_true.rs  eq_true.rs  gt_true.rs  le_false.rs  le_true.rs  ne_false.rs  or_false.rs  precedence.rs  precedence_2.rs  precedence_3.rs  skip_on_failure_multi_short_circuit.rs  skip_on_failure_short_circuit_or.rs
tests/invalid/arrays/: literal_type_mismatch.rs  literal_zero_size.rs  missing_bracket_sized.rs  missing_bracket_unsized.rs  no_size_in_declaration.rs  zero_size.rs
tests/invalid/binary_operators/: fancy_function_no_semicolon.rs  malformed_paren.rs  missing_first_op.rs  missing_second_op.rs  no_semicolon.rs
tests/invalid/boolean_operators/: fancy_function_no_semicolon.rs  missing_first_op.rs  missing_mid_op.rs  missing_second_op.rs  missing_semicolon.rs
tests/invalid/c_void/: deref_pointer.rs  variable_type.rs
tests/invalid/character_literal/: empty.rs
tests/invalid/character_literals/: escaped_end_quote.rs  invalid_escape.rs  missing_end_quote.rs  missing_start_quote.rs  to_big.rs
tests/invalid/conditional_expression/: incomplete_ternary.rs  malformed_ternary.rs  malformed_ternary_2.rs
tests/invalid/conditional_expressions/: malformed_ternary.rs
tests/invalid/conditional_statements/: declare_statement.rs  if_assignment.rs  mismatched_nesting.rs
tests/invalid/functions/: bad_arg.rs  declaration.rs  declaration_mismatch.rs  declaration_mismatch_2.rs  redefine_function.rs  redefine_variable.rs  too_many_args.rs
tests/invalid/global_variables/: fun_redefined_as_var.rs  multiple_global_defs.rs  non_constant_init.rs  use_before_declaration.rs  var_redefined_as_fun.rs  variable_used_as_fun.rs
tests/invalid/import/: error_in_imported.rs  nonexistent_file.rs  nonexistent_program_item.rs
tests/invalid/loops/: break_not_in_loop.rs  do_no_semicolon.rs  empty_clause.rs  for_wrong_condition.rs  for_wrong_increment.rs  out_of_scope.rs  out_of_scope_do_while.rs  paren_mismatch.rs  skip_not_in_loop.rs  statement_in_condition.rs  too_few_for_clauses.rs  too_many_for_clauses.rs
tests/invalid/numbers/: fancy_function_no_semicolon.rs  missing_paren.rs  missing_retval.rs  more_than_64_bits.rs  no_brace.rs  no_semicolon.rs  no_space.rs  wrong_case.rs
tests/invalid/pointers/: deref_non_pointer.rs  missing_deref.rs  no_deref.rs  pointer_arithmetic.rs  too_many_derefs.rs
tests/invalid/scoping/: double_define.rs  extra_brace.rs  missing_brace.rs  out_of_scope.rs
tests/invalid/strings/: escaped_end_quote.rs  invalid_escape_code.rs  missing_end_quote.rs  missing_start_quote.rs
tests/invalid/unary_operators/: fancy_function_no_semicolon.rs  missing_const.rs  missing_semicolon.rs  nested_missing_const.rs  wrong_order.rs
tests/invalid/variables/: bad_decl.rs  bad_decl_2.rs  bad_lvalue.rs  bad_lvalue_2.rs  no_semicolon.rs  redefine.rs  undeclared_var.rs  var_declared_late.rs
tests/unary_operators/: return_not_0.rs
tests/valid/arrays/: 2d_array_in_expression_statement.rs  2d_array_variable.rs  2d_slice_assignment.rs  array_access_in_function.rs  array_access_recursive.rs  array_expression_assignment_chaining.rs  array_expression_assignment_chaining_meta.rs  array_in_expression_statement.rs  array_variable.rs  global_2d_array.rs  global_array.rs  index_assignment.rs  index_deref_array_in_function.rs  index_literal.rs  index_literal_2d.rs  seperate_assignment.rs  uninitialized.rs  uninitialized_array_wth_pointers.rs  uninitialized_global.rs  uninitialized_var_after.rs  uninitialized_var_before.rs  uninitialized_var_before_and_after.rs  uninitialized_zero.rs  uninitialized_zero_dereference.rs  uninitialized_zero_dereference_2d.rs  uninitialized_zero_global.rs  uninitialized_zero_stack_preparation.rs
tests/valid/binary_operators/: add.rs  associativity.rs  associativity2.rs  div.rs  div_neg.rs  fancy_function.rs  mod.rs  mod_neg.rs  mult.rs  mult_neg_both.rs  mult_neg_first.rs  mult_neg_second.rs  parens.rs  precedence.rs  sub.rs  sub_neg.rs  unop_add.rs  unop_parens.rs
tests/valid/boolean_operators/: and_false.rs  and_true.rs  eq_false.rs  eq_true.rs  fancy_function.rs  ge_false.rs  ge_true.rs  gt_false.rs  gt_true.rs  le_false.rs  le_true.rs  lt_false.rs  lt_true.rs  multi_short_circuit.rs  ne_false.rs  ne_true.rs  or_false.rs  or_true.rs  precedence.rs  precedence_2.rs  precedence_3.rs  precedence_4.rs  short_circuit_and.rs  short_circuit_or.rs
tests/variables/: assign.rs  assign_val.rs  exp_return_val.rs  multiple_vars.rs  no_initialize.rs
(+279 files in other folders)
